--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -14,9 +14,8 @@
         <br>Game</br>
     </h1>
     <div>
-        <button id="newGame">New Game</button>
-        <span id="blank"></span>
         <button id="vsPlayer">Player vs. Player</button>
+        <span id="blank"></span>
         <button id="vsComputer">Player vs. Computer</button>
 
     </div>
@@ -41,6 +40,7 @@
             <td id="c22"></td>
         </tr>
     </table>
+    <h2> Created by Ben Aharon</h2>
     <script type="text/javascript" src="XOfunction.js"></script>
 </body>
 
