--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
 <body>
     <h1>
-        <br>Tic Tac Toe</br>
-        <br>Game</br>
+        Tic Tac Toe<br>Game
     </h1>
     <div>
         <button id="vsPlayer">Player vs. Player</button>
