--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
 <body>
     <h1>
-        Tic Tac Toe
-        <br>Game
+        Tic Tac Toe<br>Game
     </h1>
     <div>
         <button id="vsPlayer">Player vs. Player</button>
